# python-lib-xulbux

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml  test-and-lint.yml
src/xulbux/: __init__.py  code.py  color.py  console.py  data.py  env_path.py  file.py  file_sys.py  format_codes.py  json.py  path.py  regex.py  string.py  system.py
src/xulbux/base/: consts.py  decorators.py  exceptions.py  types.py
src/xulbux/cli/: __init__.py  help.py  tools.py
tests/: test_cli.py  test_color.py  test_color_types.py  test_console.py  test_data.py  test_env_path.py  test_file.py  test_file_sys.py  test_format_codes.py  test_json.py  test_metadata_consistency.py  test_path.py  test_regex.py  test_string.py  test_system.py
