[build-system]
requires = [
  "setuptools>=80.0.0",
  "wheel>=0.45.0",
  "mypy>=1.19.0",
  "mypy-extensions>=1.1.0",
  # TYPES FOR MyPy
  "types-regex",
  "types-keyboard",
  "prompt_toolkit>=3.0.41",
]
build-backend = "setuptools.build_meta"

[project]
name = "xulbux"
version = "1.9.4"
authors = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
maintainers = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
description = "A Python library to simplify common programming tasks."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10.0"
dependencies = [
  "keyboard>=0.13.5",
  "prompt_toolkit>=3.0.41",
  "regex>=2023.10.3",
]
optional-dependencies = { dev = [
  "black>=23.7.0",
  "flake8-pyproject>=1.2.3",
  "flake8>=6.1.0",
  "isort>=5.12.0",
  "pytest>=7.4.2",
] }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
  "args",
  "arguments",
  "attributes",
  "classes",
  "client",
  "cmd",
  "code",
  "codes",
  "color",
  "commands",
  "console",
  "constants",
  "consts",
  "conversion",
  "convert",
  "data",
  "debug",
  "easier",
  "env",
  "environment",
  "error",
  "file",
  "format",
  "formatting",
  "functions",
  "helper",
  "hex",
  "hexa",
  "hsl",
  "hsla",
  "info",
  "input",
  "json",
  "library",
  "log",
  "logging",
  "methods",
  "nice",
  "operations",
  "path",
  "presets",
  "pretty",
  "printing",
  "properties",
  "python",
  "re",
  "regex",
  "rgb",
  "rgba",
  "string",
  "structures",
  "system",
  "tools",
  "types",
  "utility",
  "warn",
  "warning",
  "xulbux",
]

[project.urls]
"Homepage" = "https://github.com/XulbuX/PythonLibraryXulbuX"
"Documentation" = "https://github.com/XulbuX/PythonLibraryXulbuX/wiki"
"Source Code" = "https://github.com/XulbuX/PythonLibraryXulbuX/tree/main/src"
"Changelog" = "https://github.com/XulbuX/PythonLibraryXulbuX/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/XulbuX/PythonLibraryXulbuX/issues"
"Stats" = "https://clickpy.clickhouse.com/dashboard/xulbux"
"License" = "https://github.com/XulbuX/PythonLibraryXulbuX/blob/main/LICENSE"

[project.scripts]
xulbux-help = "xulbux.cli.help:show_help"

[tool.black]
line-length = 127
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-complexity = 12
max-line-length = 127
select = ["E", "F", "W", "C90"]
extend-ignore = ["E203", "E266", "E502", "W503"]
per-file-ignores = ["__init__.py:F403,F405"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = [
  "tests/test_code.py",
  "tests/test_color_types.py",
  "tests/test_color.py",
  "tests/test_console.py",
  "tests/test_data.py",
  "tests/test_env_path.py",
  "tests/test_file.py",
  "tests/test_format_codes.py",
  "tests/test_json.py",
  "tests/test_path.py",
  "tests/test_regex.py",
  "tests/test_string.py",
  "tests/test_system.py",
  "tests/test_version_consistency.py",
]
